生成的抽象类占位方法以异常代替返回默认值

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -40,5 +40,5 @@ dependencies {
     compile project(':core')
     annotationProcessor project(':processor')
 
-    // compile 'com.github.twiceyuan:RetrofitMockResult:325ae5b3c3'
+    compile 'com.github.twiceyuan:RetrofitMockResult:5f31d1f05f'
 }
